# ComfyUI-NakuNode

./: LICENSE.txt  README.md  __init__.py  pyproject.toml  requirements.txt
py/: Naku_API.py  Naku_Painting.py  Naku_TextSelection.py  canvas.py  flux2_image_reference.py  md.py  utils.py
web/: CanvasNode.js  painting_nodes.js  queue_shortcut.js  smart_annotation.js
web/lib/: fabric-slim.min.js
