[project]
name = "naku_nodes"
description = "This is a toolset designed for ComfyUI, providing a series of practical image processing and operation nodes, making our operation more intuitive and convenient"
version = "2.1.0"
license = { text = "MIT License" }
dependencies = ["opencv-contrib-python", "Pillow", "torch", "numpy"]

[project.urls]
Repository = "https://github.com/LAOGOU-666/Comfyui_NakuNodes"

[tool.comfy]
PublisherId = "naku"
DisplayName = "NakuNodes"
Icon = ""
